update Home link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
     <span id="nav-links" style="display: none;">
       <ul class="nav nav-pills">
-        <li><a id="home-nav" href="/">Home</a></li>
+        <li><a id="home-nav" href="/~awstlaur/pyret-benchmark-visualization">Home</a></li>
         <li><a id="back-nav" href="#">Back</a></li>
         <li><a id="forward-nav" href="#">Forward</a></li>
         <li><a id="toggle-nav" href="#">Toggle</a></li>
