--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
       })();
 
       if (urlParams.build) {
-        //var build = parseInt(urlParams.build);
         var build = urlParams.build;
+        if (build.endsWith('/')) {
+          build = build.slice(0, build.length - 1);
+        }
 
         var normalized = urlParams.normalized 
           ? urlParams.normalized.slice(0,2) === 'on'
@@ -75,8 +77,6 @@
         var sort = urlParams.sort 
           ? urlParams.sort.slice(0,2) === 'on'
           : false;
-
-          console.log(sort);
 
         var promise = visualize(build, normalized, sort);
 
