no wait not yet

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h3>Option 1: Select Jenkins Build Number</h3>
       <div class="form-group">
         <label for="build-number">Build number:</label><br />
-        (310 or higher; or specify range (e.g. '2040:2050'))<br />
+        (310 or higher)<br />
         <input type="text" name="build" min="310" autofocus id="build-number">
       </div>
       <div class="checkbox">
